--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "incremental": true,
-    "tsBuildInfoFile": "cache/tsconfig.tsbuildinfo",
-
+    "tsBuildInfoFile": "cache/tsconfig.tsbuildinfo"
   },
   "exclude": [
     "node_modules",
